Fix the tab alignment.
The tabs weren't aligning correctly because of using `display: inline` rather than `display: inline-block`.

When an element is `display: inline`, the values for padding, margin, and borders do not contribute to the element's height. It will always only treated as being as tall as its content when the browser is laying out the elements.

Changing to `display: inline-block` permits the padding on the `li` element to be included in the element's height and allows it to lay out correctly.

--- a/Styles/communityCSS.css
+++ b/Styles/communityCSS.css
@@ -126,11 +126,11 @@ textarea{
     padding: 0;
     margin: 0;
     background-color: #830019;
-    padding-bottom: 4.5px;
+    padding-bottom: 0;
     padding-top:1em;
 }
 #tabs ul li{
-    display: inline;
+    display: inline-block;
     border: solid;
     border-width: 0 1px 0 1px;
     margin: 0;
